<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item android:id="@+id/action_clear"
        android:title="@string/action_clear"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/action_stop_service"
        android:title="@string/action_stop_service"
        android:icon="@drawable/on"
        android:orderInCategory="200"
        app:showAsAction="always" />

    <item android:id="@+id/action_start_service"
        android:title="@string/action_start_service"
        android:icon="@drawable/off"
        android:orderInCategory="300"
        app:showAsAction="always" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:visible="false"
        android:orderInCategory="400"
        app:showAsAction="never" />
</menu>
