<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/head"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="30dp"
    android:paddingTop="30dp">

    <com.github.lzyzsd.circleprogress.ArcProgress
        android:id="@+id/arc_progress"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        custom:arc_bottom_text="@string/today"
        custom:arc_bottom_text_size="20sp"
        custom:arc_finished_color="@color/progress_green"
        custom:arc_unfinished_color="#cccccc" />

    <RelativeLayout
        android:id="@+id/totalPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/arc_progress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp">

        <RelativeLayout
            android:id="@+id/limitPlace"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/limit"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/labelLimit"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/onPlace"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/limitPlace"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/total_on"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvTotalON"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/labelTotal"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/onAllPlace"
            android:layout_below="@+id/onPlace"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelAllTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/total_all_on"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvTotalAllON"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/labelAllTotal"
                android:textSize="16sp" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>